bluec-tests/tests/valid/typedef/same_identifier_different_scopes1.c
int main(void) {
    typedef int AA;
    {
        AA aa = 1;
        int AA = 2;
        return aa + AA;
    }
}