bluec-tests/tests/invalid/typedef/syntax1.c
int main(void) {
    int MyInt typedef;
}